[project]
name = "imagecount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anybadge>=1.16.0",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "matplotlib>=3.10.8",
    "redis==4.6.* ; sys_platform == 'linux'",
    "redislite>=6.2.912183 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
